--- a/AnujShah.css
+++ b/AnujShah.css
@@ -1,46 +1,3 @@
-/* HTML Body */
-body 
-{
-	font-family: 'Dosis', sans-serif;
-	background-color: #E6E6E6;
-}
-
-/* Headings */
-h1
-{
-	font-size: 120px;
-	font-family: 'Raleway', sans-serif;
-}
-h2
-{
-	color: #66A3FF;
-	font-size: 40px;
-	font-family: 'Poiret One', cursive;
-}
-
-/* Center the text. */
-.text {text-align: center;}
-
-/* Set the text color. */
-.text {color: #00ACE9;}
-
-/* Set the font size. */
-p, input, label {font-size: 25px;}
-
-/* Indent the content. */
-p, textarea, #required, #submit {margin-left: 20px;}
-
-/* RSVP Form */
-#form 
-{
-	border-style: solid;
-    border-width: 2px;
-	border-color: #222222;
-}
-#submit:hover {background-color: #CCCCCC;}
-input, textarea {border-radius: 5px;}
-input[type="text"], textarea[type="text"] {font-family: 'Dosis', sans-serif;}
-
 /* Links */
 a:link, a:visited
 {
@@ -48,9 +5,20 @@ a:link, a:visited
 	text-decoration: none;
 }
 
+h1
+{
+	font-size: 120px;
+	font-family: 'Raleway', sans-serif;
+}
+h2
+{
+	font-weight: bold;
+	font-family: 'Poiret One', cursive;
+}
+
 #resume
 {
-	font-size: 40px;
+	font-size: 20px;
 	color: #FFFFFF;
 	background-color: #9933FF;
 	padding: 8px 8px 8px 8px;
@@ -60,16 +28,10 @@ a:link, a:visited
 {
 	background-color: #6600CC;
 }
-
-#up:hover
-{
-	text-shadow: 1px 1px #FFFFFF;
-}
-
 .about
 {
-	width: 960px;
-	height: 636px;
+	width: 480px;
+	height: 318px;
 }
 .logo
 {
@@ -83,49 +45,38 @@ a:link, a:visited
 }
 .main_pics
 {
-	width: 400px;
-	height: 400px;
+	width: 300px;
+	height: 300px;
+}
+.company
+{
+	margin-top: 10px;
 }
 
-/* 
------ Tabs -----
-*/
-
-/* Style the list. */
-ul.tab 
+.jumbotron
 {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-	background-color: #FAF0E6;
+	color: #00ACE9;
+	padding: 50px 25px;
 }
-
-/* Float the list items side by side. */
-ul.tab li {float: left;}
-
-/* Style the links inside the list items. */
-ul.tab li a 
+.bg-grey
 {
-	display: inline-block;
-	padding: 14px 16px;
-	text-align: center;
-	text-decoration: none;
-	color: #000000;
-	font-size: 20px;
-	transition: 0.4s;
+	background-color: #F6F6F6;
 }
-
-/* Change background color of links on hover. */
-ul.tab li a:hover {background-color: #E0E0EB;}
-
-/* Create an active/current tablink class. */
-ul.tab li a:focus, .active {background-color: #D9D9D9;}
-
-/* Style the tab content. */
-.tabcontent 
+.school
 {
-	display: none;
-	border-top: none;
-	padding: 6px 12px;
+	background-image: url("Banner.jpg");
+	background-size: cover;
+	color: #FFFFFF;
+}
+.container-fluid
+{
+	padding: 60px 50px;
+}
+@media screen and (max-width: 768px) 
+{
+	.col-sm-4 
+	{
+		text-align: center;
+		margin: 25px 0;
+	}
 }
