master: reorganizing file directory for project

--- a/css/index.css
+++ b/css/index.css
@@ -63,7 +63,7 @@ h2
 }
 .school
 {
-	background-image: url("../UCI/Banner.jpg");
+	background-image: url("../img/education/banner.jpg");
 	background-size: cover;
 	color: #FFFFFF;
 }
