--- a/css/index.css
+++ b/css/index.css
@@ -63,6 +63,8 @@ h2
 }
 .school
 {
+	width: 100%;
+    height: auto;
 	background-image: url("../img/education/banner.jpg");
 	background-size: cover;
 	color: #FFFFFF;
